--- a/apps/hs/qua-server/qua-server.cabal
+++ b/apps/hs/qua-server/qua-server.cabal
@@ -17,143 +17,125 @@ category: Web
 author: Artem Chirkin
 
 source-repository head
-  type:     git
-  location: https://github.com/achirkin/qua-kit.git
+    type: git
+    location: https://github.com/achirkin/qua-kit.git
 
-Flag dev
-    Description:   Turn on development settings, like auto-reload templates.
-    Default:       False
+flag dev
+    description:
+        Turn on development settings, like auto-reload templates.
+    default: False
 
-Flag library-only
-    Description:   Build for use with "yesod devel"
-    Default:       False
+flag library-only
+    description:
+        Build for use with "yesod devel"
+    default: False
 
 library
-    hs-source-dirs: src
-    default-language: Haskell2010
-    exposed-modules: Application
-                     Foundation
-                     Import
-                     Import.NoFoundation
-                     Model
-                     Settings
-                     Settings.StaticFiles
-                     Handler.Common
-                     Handler.Home
 
-    if flag(dev) || flag(library-only)
-        cpp-options:   -DDEVELOPMENT
-        ghc-options:   -Wall -fwarn-tabs -O0
+    if (flag(dev) || flag(library-only))
+        cpp-options: -DDEVELOPMENT
+        ghc-options: -Wall -fwarn-tabs -O0
     else
-        ghc-options:   -Wall -fwarn-tabs -O2
-
-    default-extensions:
-                TemplateHaskell
-                QuasiQuotes
-                OverloadedStrings
-                NoImplicitPrelude
-                MultiParamTypeClasses
-                TypeFamilies
-                GADTs
-                GeneralizedNewtypeDeriving
-                FlexibleContexts
-                FlexibleInstances
-                EmptyDataDecls
-                NoMonomorphismRestriction
-                DeriveDataTypeable
-                ViewPatterns
-                TupleSections
-                RecordWildCards
-
-    build-depends: base                          >= 4          && < 5
-                 , yesod                         >= 1.4.3      && < 1.5
-                 , yesod-core                    >= 1.4.17     && < 1.5
-                 , yesod-auth                    >= 1.4.0      && < 1.5
-                 , yesod-static                  >= 1.4.0.3    && < 1.6
-                 , yesod-form                    >= 1.4.0      && < 1.5
-                 , classy-prelude                >= 0.10.2
-                 , classy-prelude-conduit        >= 0.10.2
-                 , classy-prelude-yesod          >= 0.10.2
-                 , bytestring                    >= 0.9        && < 0.11
-                 , text                          >= 0.11       && < 2.0
-                 , persistent                    >= 2.0        && < 2.6
-                 , persistent-sqlite             >= 2.1.1      && < 2.6
-                 , persistent-template           >= 2.0        && < 2.6
-                 , template-haskell
-                 , shakespeare                   >= 2.0        && < 2.1
-                 , hjsmin                        >= 0.1        && < 0.3
-                 , monad-control                 >= 0.3        && < 1.1
-                 , wai-extra                     >= 3.0        && < 3.1
-                 , yaml                          >= 0.8        && < 0.9
-                 , http-conduit                  >= 2.1        && < 2.2
-                 , directory                     >= 1.1        && < 1.3
-                 , warp                          >= 3.0        && < 3.3
-                 , data-default
-                 , aeson                         >= 0.6        && < 0.12
-                 , conduit                       >= 1.0        && < 2.0
-                 , monad-logger                  >= 0.3        && < 0.4
-                 , fast-logger                   >= 2.2        && < 2.5
-                 , wai-logger                    >= 2.2        && < 2.3
-                 , file-embed
-                 , safe
-                 , unordered-containers
-                 , containers
-                 , vector
-                 , time
-                 , case-insensitive
-                 , wai
-
-executable         qua-server
-    if flag(library-only)
-        Buildable: False
-
-    main-is:           main.hs
-    hs-source-dirs:    app
+        ghc-options: -Wall -fwarn-tabs -O2
+    exposed-modules:
+        Application
+        Foundation
+        Handler.Common
+        Handler.Home
+        Handler.LuciProxy
+        Import
+        Import.NoFoundation
+        Model
+        Settings
+        Settings.StaticFiles
+    build-depends:
+        base >=4 && <5,
+        yesod >=1.4.3 && <1.5,
+        yesod-core >=1.4.17 && <1.5,
+        yesod-auth >=1.4.0 && <1.5,
+        yesod-static >=1.4.0.3 && <1.6,
+        yesod-form >=1.4.0 && <1.5,
+        yesod-websockets -any,
+        classy-prelude >=0.10.2,
+        classy-prelude-conduit >=0.10.2,
+        classy-prelude-yesod >=0.10.2,
+        bytestring >=0.9 && <0.11,
+        text >=0.11 && <2.0,
+        persistent >=2.0 && <2.6,
+        persistent-sqlite >=2.1.1 && <2.6,
+        persistent-template >=2.0 && <2.6,
+        template-haskell -any,
+        shakespeare >=2.0 && <2.1,
+        hjsmin >=0.1 && <0.3,
+        monad-control >=0.3 && <1.1,
+        wai-extra >=3.0 && <3.1,
+        yaml >=0.8 && <0.9,
+        http-conduit >=2.1 && <2.2,
+        directory >=1.1 && <1.3,
+        warp >=3.0 && <3.3,
+        data-default -any,
+        aeson >=0.6 && <0.12,
+        conduit >=1.0 && <2.0,
+        monad-logger >=0.3 && <0.4,
+        fast-logger >=2.2 && <2.5,
+        wai-logger >=2.2 && <2.3,
+        file-embed -any,
+        safe -any,
+        unordered-containers -any,
+        containers -any,
+        vector -any,
+        time -any,
+        case-insensitive -any,
+        wai -any,
+        stm -any
     default-language: Haskell2010
-    build-depends:     base, qua-server
+    default-extensions: TemplateHaskell QuasiQuotes OverloadedStrings
+                        NoImplicitPrelude MultiParamTypeClasses TypeFamilies GADTs
+                        GeneralizedNewtypeDeriving FlexibleContexts FlexibleInstances
+                        EmptyDataDecls NoMonomorphismRestriction DeriveDataTypeable
+                        ViewPatterns TupleSections RecordWildCards
+    hs-source-dirs: src
 
-    ghc-options:       -threaded -rtsopts -with-rtsopts=-N
+executable qua-server
+
+    if flag(library-only)
+        buildable: False
+    main-is: main.hs
+    build-depends:
+        base -any,
+        qua-server -any
+    default-language: Haskell2010
+    hs-source-dirs: app
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N
 
 test-suite test
-    type:              exitcode-stdio-1.0
-    main-is:           Spec.hs
-    other-modules:     Handler.CommonSpec
-                       Handler.HomeSpec
-                       TestImport
-    hs-source-dirs:    test
+    type: exitcode-stdio-1.0
+    main-is: Spec.hs
+    build-depends:
+        base -any,
+        qua-server -any,
+        yesod-test >=1.5.0.1 && <1.6,
+        yesod-core -any,
+        yesod -any,
+        persistent -any,
+        persistent-sqlite -any,
+        resourcet -any,
+        monad-logger -any,
+        shakespeare -any,
+        transformers -any,
+        hspec >=2.0.0,
+        classy-prelude -any,
+        classy-prelude-yesod -any,
+        aeson -any
     default-language: Haskell2010
-    ghc-options:       -Wall
-
-    default-extensions:
-                TemplateHaskell
-                QuasiQuotes
-                OverloadedStrings
-                NoImplicitPrelude
-                CPP
-                MultiParamTypeClasses
-                TypeFamilies
-                GADTs
-                GeneralizedNewtypeDeriving
-                FlexibleContexts
-                FlexibleInstances
-                EmptyDataDecls
-                NoMonomorphismRestriction
-                DeriveDataTypeable
-                ViewPatterns
-                TupleSections
-
-    build-depends: base
-                 , qua-server
-                 , yesod-test >= 1.5.0.1 && < 1.6
-                 , yesod-core
-                 , yesod
-                 , persistent
-                 , persistent-sqlite
-                 , resourcet
-                 , monad-logger
-                 , shakespeare
-                 , transformers
-                 , hspec >= 2.0.0
-                 , classy-prelude
-                 , classy-prelude-yesod
-                 , aeson
+    default-extensions: TemplateHaskell QuasiQuotes OverloadedStrings
+                        NoImplicitPrelude CPP MultiParamTypeClasses TypeFamilies GADTs
+                        GeneralizedNewtypeDeriving FlexibleContexts FlexibleInstances
+                        EmptyDataDecls NoMonomorphismRestriction DeriveDataTypeable
+                        ViewPatterns TupleSections
+    hs-source-dirs: test
+    other-modules:
+        Handler.CommonSpec
+        Handler.HomeSpec
+        TestImport
+    ghc-options: -Wall
