--- a/libs/hs/helen/helen.cabal
+++ b/libs/hs/helen/helen.cabal
@@ -20,6 +20,7 @@ author: Artem Chirkin
 library
     exposed-modules:
         Helen.Core
+        Helen.Core.Service
     build-depends:
         base >=4.8 && <5,
         text -any,
@@ -28,7 +29,8 @@ library
         transformers -any,
         mtl -any,
         conduit >=1.0.0 && <1.3,
-        luci-connect -any
+        luci-connect -any,
+        monad-control >=1.0.1.0 && <1.1
     default-language: Haskell2010
     hs-source-dirs: src
     ghc-options: -Wall -ferror-spans
@@ -41,10 +43,10 @@ executable helen
         text -any,
         bytestring >=0.10.6.0,
         conduit >=1.0.0 && <1.3,
-        luci-connect -any,
-        helen -any
+        luci-connect >=1.0.1,
+        helen -any,
+        monad-control >=1.0.1.0 && <1.1
     default-language: Haskell2010
     hs-source-dirs: app
-    other-modules:
     ghc-options: -Wall -ferror-spans
 
