--- a/apps/hs/qua-server/qua-server.cabal
+++ b/apps/hs/qua-server/qua-server.cabal
@@ -31,7 +31,7 @@ flag library-only
     default: False
 
 library
-
+    
     if (flag(dev) || flag(library-only))
         cpp-options: -DDEVELOPMENT
         ghc-options: -Wall -fwarn-tabs -O0
@@ -45,6 +45,7 @@ library
         Handler.Home.LoadingSplash
         Handler.Home.LuciConnect
         Handler.Home.PanelGeometry
+        Handler.Home.PanelInfo
         Handler.Home.PanelServices
         Handler.Home.PopupHelp
         Handler.Home.PopupSave
@@ -106,7 +107,7 @@ library
     hs-source-dirs: src
 
 executable qua-server
-
+    
     if flag(library-only)
         buildable: False
     main-is: main.hs
