--- a/libs/hs/helen/helen.cabal
+++ b/libs/hs/helen/helen.cabal
@@ -21,6 +21,7 @@ library
     exposed-modules:
         Helen.Core
         Helen.Core.Service
+        Helen.Core.Types
     build-depends:
         base >=4.8 && <5,
         text -any,
@@ -34,7 +35,10 @@ library
         conduit-extra >=1.1.13.2 && <1.2,
         unordered-containers >=0.2.7.1 && <0.3,
         stm >=2.4.4.1 && <2.5,
-        hashable >=1.2.4.0 && <1.3
+        hashable >=1.2.4.0 && <1.3,
+        transformers-base >=0.4.4 && <0.5,
+        monad-logger >=0.3.19 && <0.4,
+        cryptonite >=0.17 && <0.18
     default-language: Haskell2010
     hs-source-dirs: src
     ghc-options: -Wall -ferror-spans
@@ -53,7 +57,10 @@ executable helen
         conduit-extra >=1.1.13.2 && <1.2,
         unordered-containers >=0.2.7.1 && <0.3,
         stm >=2.4.4.1 && <2.5,
-        hashable >=1.2.4.0 && <1.3
+        hashable >=1.2.4.0 && <1.3,
+        transformers-base >=0.4.4 && <0.5,
+        monad-logger >=0.3.19 && <0.4,
+        cryptonite >=0.17 && <0.18
     default-language: Haskell2010
     hs-source-dirs: app
     ghc-options: -Wall -ferror-spans
