--- a/libs/hs/luci-connect/luci-connect.cabal
+++ b/libs/hs/luci-connect/luci-connect.cabal
@@ -54,7 +54,8 @@ library
         monad-logger -any,
         streaming-commons -any,
         mtl -any,
-        time -any
+        time -any,
+        hashable >=1.2.4.0 && <1.3
     default-language: Haskell2010
     hs-source-dirs: src
     other-modules:
