--- a/libs/hs/luci-connect/luci-connect.cabal
+++ b/libs/hs/luci-connect/luci-connect.cabal
@@ -125,3 +125,25 @@ executable haskell-tutorial-service
     hs-source-dirs: examples
     ghc-options: -Wall -ferror-spans
 
+executable dist-walls-service
+
+    if !flag(examples)
+        buildable: False
+    main-is: DistToWallsService.hs
+    build-depends:
+        base >=4.8.2 && <4.9,
+        aeson -any,
+        text -any,
+        vector -any,
+        conduit -any,
+        conduit >=1.2.6.6 && <1.3,
+        unordered-containers >=0.2.7.0 && <0.3,
+        bytestring >=0.10.6.0,
+        fastvec -any,
+        geojson -any,
+        lens -any,
+        luci-connect -any
+    default-language: Haskell2010
+    hs-source-dirs: examples
+    ghc-options: -Wall -ferror-spans -fllvm -O2 -fenable-rewrite-rules
+
