--- a/libs/hs/helen/helen.cabal
+++ b/libs/hs/helen/helen.cabal
@@ -29,16 +29,16 @@ library
         aeson -any,
         transformers -any,
         mtl -any,
-        conduit >=1.0.0 && <1.3,
+        conduit >=1.0.0,
         luci-connect -any,
-        monad-control >=1.0.1.0 && <1.1,
-        conduit-extra >=1.1.13.2 && <1.2,
-        unordered-containers >=0.2.7.1 && <0.3,
-        stm >=2.4.4.1 && <2.5,
-        hashable >=1.2.4.0 && <1.3,
-        transformers-base >=0.4.4 && <0.5,
-        monad-logger >=0.3.19 && <0.4,
-        cryptonite >=0.17 && <0.18,
+        monad-control -any,
+        conduit-extra -any,
+        unordered-containers -any,
+        stm -any,
+        hashable -any,
+        transformers-base -any,
+        monad-logger -any,
+        cryptonite -any,
         lens -any,
         containers >=0.5.6.2 && <0.6
     default-language: Haskell2010
@@ -52,7 +52,7 @@ executable helen
         aeson -any,
         text -any,
         bytestring >=0.10.6.0,
-        conduit >=1.0.0 && <1.3,
+        conduit -any,
         luci-connect >=1.0.1,
         helen -any
     default-language: Haskell2010
