--- a/libs/hs/helen/helen.cabal
+++ b/libs/hs/helen/helen.cabal
@@ -40,7 +40,8 @@ library
         monad-logger -any,
         cryptonite -any,
         lens -any,
-        containers >=0.5.6.2 && <0.6
+        containers >=0.5.6.2 && <0.6,
+        time >=1.4 && <1.6
     default-language: Haskell2010
     hs-source-dirs: src
     ghc-options: -Wall -ferror-spans
