--- a/apps/hs/qua-server/config/settings.yml
+++ b/apps/hs/qua-server/config/settings.yml
@@ -23,12 +23,9 @@ ip-from-header: "_env:IP_FROM_HEADER:false"
 # NB: If you need a numeric value (e.g. 123) to parse as a String, wrap it in single quotes (e.g. "_env:PGPASS:'123'")
 # See https://github.com/yesodweb/yesod/wiki/Configuration#parsing-numeric-values-as-strings
 
-database:
-  # See config/test-settings.yml for an override during tests
-  database: "_env:SQLITE_DATABASE:qua-server.sqlite3"
-  poolsize: "_env:SQLITE_POOLSIZE:10"
-
 copyright: (c) Artem Chirkin
 #analytics: UA-YOURCODE
+lti-key: "_env:LTI_KEY:oauth_lti_provider_key"
+lti-secret: "_env:LTI_SECRET:oauth_lti_provider_secret"
 luci-host: 129.132.6.33
 luci-port: 7654
