--- a/apps/hs/qua-server/config/test-settings.yml
+++ b/apps/hs/qua-server/config/test-settings.yml
@@ -5,5 +5,5 @@ database:
   # would like to have environment variable overrides, you could instead use
   # something like:
   #
-  #   database: "_env:SQLITE_DATABASE:qua-server_test.sqlite3"
-  database: qua-server_test.sqlite3
+  #   database: "_env:SQLITE_DATABASE:qua-server_test.sqlite"
+  database: qua-server_test.sqlite
