--- a/libs/hs/ltiv1p1/ltiv1p1.cabal
+++ b/libs/hs/ltiv1p1/ltiv1p1.cabal
@@ -26,21 +26,21 @@ library
     build-depends:
         base >=4 && <5,
         bytestring >=0.10.6.0,
-        xml-hamlet >=0.4.0.11 && <0.5,
-        xml-conduit >=1.3.4 && <1.4,
-        text >=1.2.2.0 && <1.3,
+        xml-hamlet >=0.4.0.11,
+        xml-conduit >=1.3.4,
+        text >=1.2.2.0,
         authenticate-oauth >=1.6,
-        containers >=0.5.6.2 && <0.6,
-        http-client >=0.4.27 && <0.4.29,
-        http-types >=0.9 && <0.10,
-        transformers >=0.4.2.0 && <0.5,
-        blaze-builder >=0.4.0.1 && <0.5,
-        wai >=3.2.0 && <3.3,
+        containers >=0.5.6.2,
+        http-client >=0.4.27,
+        http-types >=0.9,
+        transformers >=0.4.1.0,
+        blaze-builder >=0.4.0.1,
+        wai >=3.2.0,
         wai-extra >=3.0.7,
-        time >=1.5.0.1 && <1.6,
-        random >=1.1 && <1.2,
-        data-default >=0.5.3 && <0.6,
-        yesod-core >=1.4.19 && <1.5
+        time >=1.5.0.1,
+        random >=1.1,
+        data-default >=0.5.3,
+        yesod-core >=1.4.19
     default-language: Haskell2010
     hs-source-dirs: src
     ghc-options: -Wall -ferror-spans
